[package]
name = "xrtf"
version = "0.5.0"
authors = ["The Rust Hypervisor Firmware Authors", "Teddy Astie"]
edition = "2024"

# Despite "panic-strategy": "abort" being set in x86_64-unknown-none.json, panic = "abort" is
# needed here to make "cargo check" and "cargo clippy" run without errors.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"

[dependencies]
bitflags = "2.9.1"
atomic_refcell = "0.1.13"
log = "0.4.27"
volatile = { version = "0.6.1", features = ["derive", "unstable"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
tock-registers = "0.10.0"
aarch64-cpu = "10.0.0"
fdt = "0.1.5"

[target.'cfg(target_arch = "x86_64")'.dependencies]
uart_16550 = "0.4.0"
x86_64 = { version = "0.15.2", default-features = false, features = [
    "instructions",
] }

[target.'cfg(target_arch = "riscv64")'.dependencies]
fdt = "0.1.5"

[features]
fastabi = []